# adk2.0

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_adk.py
data/documents/: FAQ RAG.docx
demo_agent/: agent.py  main.py  tools.py
gemini-proxy/: main.py  requirements.txt
mmvn_b2c_agent/: __init__.py
mmvn_b2c_agent/agents/: PROMPT.md  __init__.py  root_agent.py
mmvn_b2c_agent/agents/checkout/: __init__.py  agent.py  prompts.py  schema.py
mmvn_b2c_agent/agents/cng/: __init__.py  agent.py  prompts.py  schema.py
mmvn_b2c_agent/agents/cng_product/: agent.py  prompts.py  schema.py
mmvn_b2c_agent/agents/question_answer/: __init__.py  agent.py  prompts.py  schema.py
mmvn_b2c_agent/api/: __init__.py  admin_config.py  dashboard_auth.py  feedback.py  gemini_proxy.py  metrics_dashboard.py  metrics_search_quality.py  metrics_tracking.py  rag_management.py  semantic_search.py  session_title.py  summarize_session.py  transparency.py  transparency_builder.py  update_session.py  utils.py  voice_stt.py
mmvn_b2c_agent/shared/: AgentCard.json  alert_mailer.py  budget_monitor.py  callbacks.py  config_service.py  constants.py  custom_planner.py  pricing.py  prompts_builder.py  safety.py  schema.py  tts_callbacks.py
mmvn_b2c_agent/telemetry/: __init__.py  otel_metrics.py
mmvn_b2c_agent/tools/: __init__.py  mm_vietnam_tools.py  utils.py
mmvn_b2c_agent/tools/checkout/: __init__.py  get_checkout_info.py  set_call_before_delivery.py  set_delivery_comment.py  set_mcard.py  set_vat_invoice.py  show_checkout_step.py  (+2 more)
scripts/: setup_rag.py
(+42 files in other folders)
